# pepper_camera

./: .gitignore  CMakeLists.txt  README.md  package.xml
calibration/: pepper_bottom.yaml
include/pepper_camera/: pepper_camera.h  pepper_camera_encodings.h  pepper_camera_remote.h
launch/: pepper_bottom.launch  pepper_top.launch
server/: CMakeLists.txt  Makefile  qiproject.xml
server/include/pepper_camera_server/: pepper_camera_packets.h  pepper_camera_server.h
server/src/: pepper_camera_server.cpp
src/: pepper_camera.cpp  pepper_camera_node.cpp  pepper_camera_remote.cpp
srv/: Reconfigure.srv
